--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -43,14 +43,12 @@ library(ggplot2)
 library(gt)
 library(here)
 library(gtsummary)
+library(lubridate)
 ```
 
 ## Import trips data from 'fslogisticskampala'
 
-The original set has 2 tables @lars_schobitz_fslogisticskampala_2024. One set contains information of trips of faecal sludge collection trucks and the second table with metadata on of the trucks. First we start with opening the trips.csv and save it as trips_raw.
-
-Read trips.csv:
-
+The original set has 2 tables @lars_schobitz_fslogisticskampala_2024. One set contains information of trips of faecal sludge collection trucks and the second table with metadata on of the trucks. First we start with opening the trips.csv and save it as trips_raw: 
 ```{r read_trips}
 #| message = FALSE 
 trips_raw <- read_csv(here::here("data/raw/trips.csv"))
@@ -63,21 +61,19 @@ trips_raw <- read_csv(here::here("data/raw/trips.csv"))
 #| tbl-cap: "Dictionary for trips table"
 #| message: FALSE 
 read_csv(here::here("data/trips_dictionary.csv")) |>
-  gt()
+    gt()
 ```
 From the dictionary it can be seen the trips data has information about the each recorded trip. Where the 'numberplate'column can be used as the foreign key to link to the truck dataset as described below.
 
 ## Import trucks data from 'fslogisticskampala'
-The second dataset to import is the trucks data as published in the website. Read trucks.csv:
+The second dataset to import is the trucks data as published in the website. Read trucks.csv and save as trucks_raw
 
 ```{r}
 #| message = FALSE 
-trucks_raw <- read_csv(here::here("data/raw/trucks.csv")) |>
-  head(4)
-  
+trucks_raw <- read_csv(here::here("data/raw/trucks.csv"))
 ```
 
-@tbl-trucks-dictionary shows the dictionary of the trucks set. This is a more simpel table containing meta data on the truck. It only contains 2 variables. The first is the 'numberplate' which can function as key to link to the trips dataset and the second variable is the volume of the specific truck in m3.
+@tbl-trucks-dictionary shows the dictionary of the trucks set. This is a more simple table containing meta data on the truck. It only contains 2 variables. The first is the 'numberplate' which can function as key to link to the trips dataset and the second variable is the volume of the specific truck in m3.
 ```{r}
 #| label: tbl-trucks-dictionary
 #| tbl-cap: "Dictionary for trucks table"
@@ -87,7 +83,7 @@ gt()
 ```
 
 ## Import dim_date
-In order to aid analysis a additional table is generated and imported. This table has a daily geranuality and contains time intelligence information for the data collection period. 
+In order to aid analysis a additional table is generated and imported. This table has a daily granularity and contains time intelligence information for the data collection period. 
 
 ## Checking data integrity
 In order to understand the data we will first asses the raw data. First we will count all non NA values for each column (see @tbl-count-trips. In total 5663 records are in the dataset and it can be seen each column has no NA values. 
@@ -100,7 +96,9 @@ In order to understand the data we will first asses the raw data. First we will 
 ```
 
 ```{r}
-trips_raw |> tbl_summary(numberplate)
+#| label: fig-count_of_delivery_per_truck
+#| fig-cap: "Count of recorded trips per truck"
+trips_raw |> tbl_summary(include = numberplate)
 ```
 
 #```{r}
@@ -128,9 +126,32 @@ than generate the summary table:
 #    cols_label(income_cat = "income category")
 #```
 
+The trucks data can be used as dimension table for the trips data to retrieve meta data from the trucks. In this case only the volume. In total 35 trucks are registered and each has a reported volume as an attribute:
 ```{r}
-# trips_tbl_sum <- trips_raw |>
   colSums(!is.na(trucks_raw))
+```
+
+## Write data into folder with cleaned data
+
+### trips
+Write the cleaned trips data/processed data as csv after cleaning.
+```{r}
+trips <-  trips_raw |>
+  mutate(numberplate = as.character(numberplate)) |>
+  write_csv(here::here("data/processed/trips.csv"))
+```
+### trucks
+```{r}
+trucks <- trucks_raw |>
+  mutate(numberplate = as.character(numberplate)) |>
+  write_csv(here::here("data/processed/trucks.csv"))
+```
+### dim_date and dim_time
+Since the dim_date and dim_time are generated for this specific reporting purpose it is directly put in the processed folder. This can be done as no additional cleaning steps are required. After reading the document the dataframes need to be generated so they can easily be references in the code.
+```{r}
+#| message: FALSE 
+dim_date <- read_csv(here::here("data/processed/dim_date.csv"))
+dim_time <- read_csv(here::here("data/processed/dim_time.csv"))
 ```
 
 # METHODS: Generate Dataframe for analysis
@@ -138,21 +159,18 @@ than generate the summary table:
 Since the Mermaid plugin only seems to work on the highest chapter level this chapter is added as first heading.
 -->
 First the raw data is stored into the folder. This allows to make a versatile setup where cleaning steps can be incorporated into the used dataset when deemed necessary when analysis the results.
-After saving the individual tables these will be linked according a 'star' schema based on the [@kimball_data_2013]. For the analysis the trips data is used as the fact table and the trucks and dim_date tables are linked as dimension tables over which the set can be grouped and filtered.
-
-Generate a date dimension table and dimension time table in @fig-df_star_schema 
-
+After saving the individual tables these will be linked according a 'star' schema based on the [@kimball_data_2013]. For the analysis the trips data is used as the fact table and the trucks and dim_date tables are linked as dimension tables over which the set can be grouped and filtered. @fig-df_star_schema shows the schematic of the start schema.
 
 ```{mermaid}
-#| label: fig-df_star_schema
-#| fig-cap: "Star schema of data frame"
+%%| label: fig-df_star_schema
+%%| fig-cap: "Star schema of data frame"
 erDiagram
-    trips  }o--o| trucks  : numberplate
+    trips }o--o| trucks  : numberplate
     trips }o--o| dim_date : date
+    trips }o--o| dim_time   : time
     trucks {
         id numberplate	
         integer volume
-
     }
     trips {
         id fid
@@ -169,43 +187,52 @@ erDiagram
         string day_suffix
         integer week_day
         string week_day_name
-        string week_day_name-short
-        string week_dayname_first-letter
+        string week_day_name_short
+        string week_dayname_first_letter
         integer day_of_year
         integer week_of_month
         integer week_of_year
         integer month
         string month_name
         string month_name_Short
-        string month_name_first-letter
+        string month_name_first_letter
         integer quarter
         string quarter_name
         integer year
         integer yyyymm
         string year_month
         binary is_weekend
-        date first_date-of-month
-        date last_date-of-month
-        date first_date-of-week
-        date last_date-of-week
+        date first_date_of_month
+        date last_date_of_month
+        date first_date_of_week
+        date last_date_of_week
         string year_week
     }
+    dim_time{
+        integer hour12
+        integer hour24
+        integer minute_of_hour
+        integer second_of_minute
+        integer elapsed_minutes
+        integer elapsed_seconds
+        string am_pm
+        time hhmmss
+        binary working_hours
+        integer part_of_day_sort
+        string part_of_day
+    }
+    
 ```
 
-## Write data into folder with cleaned data
-
-### trips
+In order generate the star schema the code below can be executed. This code will basically do a left_join for of each dimension table to the trips fact table. This generates a big table with 44 variables and 5653 tuples (or rows). 
 
 ```{r}
-trips_raw |>
-  write_csv(here::here("data/processed/trips.csv"))
+df <- trips |>
+  left_join(trucks, by = join_by(numberplate )) |> 
+  left_join(dim_date, by = join_by(date) ) |>
+  left_join(dim_time, by = join_by(time == time_key))
 ```
-### trucks
-```{r}
-trucks_raw |>
-  write_csv(here::here("data/processed/trucks.csv"))
-```
-Since the dim_date is generated for this specific reporting purpose it is directly put in the processed folder. This is because no cleaning steps are required and the data is directly usable.
+
 # Results
 Visuals:
 map location with color on location
@@ -225,8 +252,6 @@ The original dataset on faecal sludge logistics was published under [CC-BY](http
 
 # Ideas/actions
 
--   \[\] add license type for research
--   \[\] check weather data
 -   \[\] day and night time (dim time)
 -   \[\] plot on a map
 -   \[\] check for NA values etc
