--- a/docs/references.bib
+++ b/docs/references.bib
@@ -85,6 +85,6 @@
 	month = aug,
 	year = {2014},
 	note = {00000 Faecal Sludge Management: Systems Approach for Implementation and Operation addresses the organization of the entire faecal sludge management service chain, from the collection and transport of sludge, and the current state of knowledge of treatment options, to the final end use or disposal of treated sludge.},
-	keywords = {fecal, management, sludge, treatment, waste, water},
+	keywords = {treatment, fecal, management, sludge, waste, water},
 	file = {fsm_book.pdf:C\:\\Users\\jos\\Zotero\\storage\\WMAC2VUN\\fsm_book.pdf:application/pdf;Snapshot:C\:\\Users\\jos\\Zotero\\storage\\CXHR4CFL\\template.html:text/html},
 }
